src/objects/WorkflowConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ContextUser__c</fullName>
        <label>Context User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Display_Name__c</fullName>
        <label>Email Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Reply_To_Address__c</fullName>
        <label>Email Reply To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Workflow Configuration</label>
</CustomObject>